--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -20,21 +20,20 @@ jobs:
     # if: ${{ github.repository_owner == 'liruifengv' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      # 设置 pnpm。指定版本7.0，不然会报错
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v2.2.1
+      - name: Checkout Repo
+        uses: actions/checkout@main
         with:
-          version: ^7.0
-
-      # 设置 Node
-      - name: Setup Node
-        uses: actions/setup-node@v3
+          # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
+          fetch-depth: 0
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.20.3
+      - name: Setup Node.js 16
+        uses: actions/setup-node@v2
         with:
           node-version: 16
           cache: 'pnpm'
-      # 安装依赖
-      - name: Install dependencies
+      - name: Install Dependencies
         run: pnpm install
       # 这一步是最重要的。使用changesets/action自动创建 PR 或者发布
       - name: Create Release Pull Request or Publish
