--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -35,20 +35,15 @@ jobs:
           cache: 'pnpm'
       - name: Install Dependencies
         run: pnpm install
-      # 这一步是最重要的。使用changesets/action自动创建 PR 或者发布
-      - name: Create Release Pull Request or Publish
+      - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
         with:
-          # 执行更新版本和发布的命令
-          version: pnpm run version
-          publish: pnpm run release
+          # This expects you to have a script called release which does a build for your packages and calls changeset publish
           commit: "chore: update versions"
           title: "chore: update versions"
+          publish: pnpm release
         env:
-          # 这里需要几个 Token 变量
-          # GITHUB_TOKEN 是 CI 里自带的默认 token
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # NPM_TOKEN 需要稍后在 npm 网站生成。
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
